--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,31 @@
     transform: rotate(360deg);
   }
 }
+
+.app-btn{
+  margin:0 10px;
+  padding: 8px 5px;
+  background-color: darkcyan;
+  border: 1px solid darkcyan;
+  border-radius: 5px;
+  color: azure;
+}
+.app-btn:hover{
+  margin:0 10px;
+  padding: 8px 5px;
+  background-color: azure;
+  border: 1px solid darkcyan;
+  border-radius: 5px;
+  color: darkcyan;
+  cursor: pointer;
+}
+.image-container{
+  margin-top: 20px;
+  width: 100%;
+  margin: 20px auto;
+  clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+  background-color: #282c34;
+}
+.app-image{
+  object-fit: cover;
+}
