--- a/src/App.css
+++ b/src/App.css
@@ -57,10 +57,23 @@
 .image-container{
   margin-top: 20px;
   width: 100%;
+  height: 80%;
   margin: 20px auto;
-  clip-path: polygon(25% 0%, 100% 0%, 75% 100%, 0% 100%);
+  clip-path: polygon(100% 0%, 75% 50%, 100% 100%, 25% 100%, 0% 50%, 25% 0%);
+
   background-color: #282c34;
 }
 .app-image{
   object-fit: cover;
+}
+.image-galery{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.btn-clicks{
+height: 20%;
+background-color: none;
+border: none;
 }
